# reqpy

./: README.md  pyproject.toml
reqpy/: __init__.py  main.py
src/reqpy/: __init__.py  parse.py  read.py
