[tool.poetry]
name = "reqpy"
version = "0.1.0"
description = "Determine the minimal required Python version of a package"
authors = ["Stijn de Gooijer <stijn@degooijer.io>"]
license = "MIT"
homepage = "https://github.com/stinodego/reqpy"
repository = "https://github.com/stinodego/reqpy"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.3"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
